--- a/package.json
+++ b/package.json
@@ -23,5 +23,20 @@
   "bugs": {
     "url": "https://github.com/fantasyui-com/bootstrap-electron/issues"
   },
-  "homepage": "https://github.com/fantasyui-com/bootstrap-electron#readme"
+  "homepage": "https://github.com/fantasyui-com/bootstrap-electron#readme",
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "electron-fetch": "^1.3.0",
+    "electron-store": "^2.0.0",
+    "flat-ui": "^2.1.1",
+    "font-awesome": "^4.7.0",
+    "fs-copy-file": "^2.1.2",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
+    "video.js": "^7.3.0",
+    "videogular2": "^6.3.0",
+    "videojs-offset": "^2.0.0-beta.2",
+    "vue": "^2.5.17",
+    "vuex": "^3.0.1"
+  }
 }
