--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/fantasyui-com/bootstrap-electron#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "electron-fetch": "^1.3.0",
     "electron-store": "^2.0.0",
     "flat-ui": "^2.1.1",
